--- a/config.json
+++ b/config.json
@@ -1,4 +1,6 @@
 {
   "cert": "./certs/cert.pem",
-  "cert_key": "./certs/key.pem"
+  "cert_key": "./certs/key.pem",
+  "port": ":8080",
+  "influxDBHost": "http://localhost:8086"
 }
